matching new repo to old sandbox

--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
 	<title>interactive portraits demo</title>
 	<script type="text/javascript" src="/js/paper-full.min.js"></script>
 	<script type="text/paperscript" canvas="canvas" src="/js/script.js"></script>
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-	<canvas id="canvas" resize stats hidpi="off"></canvas>
+	<canvas id="canvas" resize></canvas>
+	<div class="container">
+		<div class="images">
+			<img src="/img/Zumak1.jpg" id="image1">
+			<img src="/img/Zumak2.jpg" id="image2">
+		</div>
+	</div>
+
 </body>
 </html>
