adding JSON for portrait sets

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>interactive portraits demo</title>
+	<script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
 	<script type="text/javascript" src="/js/paper-full.min.js"></script>
 	<script type="text/paperscript" canvas="canvas" src="/js/script.js"></script>
 	<link rel="stylesheet" type="text/css" href="styles.css">
