draw a line and find the nearest entry and exit points on the bounding box

--- a/index.html
+++ b/index.html
@@ -7,18 +7,12 @@
   src="https://code.jquery.com/jquery-3.4.1.min.js"
   integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
   crossorigin="anonymous"></script>
-	<script type="text/javascript" src="/js/paper-full.min.js"></script>
+	<script type="text/javascript" src="/js/paper-full.js"></script>
 	<script type="text/paperscript" canvas="canvas" src="/js/script.js"></script>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 	<canvas id="canvas" resize></canvas>
-	<div class="container">
-		<div class="images">
-			<img src="/img/Zumak1.jpg" id="image1">
-			<img src="/img/Zumak2.jpg" id="image2">
-		</div>
-	</div>
 
 </body>
 </html>
